--- a/src/retap/main_scripts/run_retap.ipynb
+++ b/src/retap/main_scripts/run_retap.ipynb
@@ -25,7 +25,9 @@
     "# import packages and functions\n",
     "import os\n",
     "import numpy as np\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "\n",
+    "import importlib"
    ]
   },
   {
@@ -69,22 +71,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "run_retap.run_ReTap_notebook()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
