added correct environment-yml, pip install -editable functionality, updated sripts for pip install functionality

--- a/src/retap/main_scripts/run_retap.ipynb
+++ b/src/retap/main_scripts/run_retap.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1."
+    "### 1. Any preprocessing of files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.data_management import get_directories_from_cfg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paths = get_directories_from_cfg()\n",
+    "raw_path = paths['raw']\n",
+    "mat_path = os.path.join(raw_path, 'mat_files')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py\n",
+    "from scipy.io import loadmat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub-001_ses-Fu00mExtMedOff_task-RestMonoRevNoBreaks_acq-StimOn1L130Hz60us_run-1_acc.mat\n"
+     ]
+    }
+   ],
+   "source": [
+    "for fname in os.listdir(mat_path):\n",
+    "\n",
+    "    print(fname)\n",
+    "    if not fname.endswith('.mat'): continue\n",
+    "\n",
+    "    f = loadmat(os.path.join(mat_path, fname))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# f['tAcc']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Run Retap"
    ]
   },
   {
